# teler-gemini-bridge

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: teler-gemini-bridge-push.yml
app/: __init__.py  config.py  main.py
app/api/: router.py
app/api/calls/: __init__.py  models.py  routes.py
app/api/endpoints/: calls.py
app/api/webhooks/: __init__.py  routes.py
app/core/: config.py
app/routes/: __init__.py  calls.py  webhooks.py
app/services/: __init__.py  gemini.py  teler.py
app/utils/: __init__.py  audio.py  audio_resampler.py  gemini_client.py  teler_client.py
