[project]
name = "teler-gemini-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "google-genai==1.36.0",
    "httpx==0.28.1",
    "numpy==1.26.4",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.0",
    "scipy==1.15.3",
    "teler==0.2.0",
    "uvicorn[standard]==0.31.0",
]
